--- a/FlightManager/Properties/Resources.resx
+++ b/FlightManager/Properties/Resources.resx
@@ -118,10 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="flightmanagerlogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\flightmanagerlogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ariportbackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ariportbackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="flightmanagerlogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\flightmanagerlogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lobbybackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lobbybackground.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
